packages/client/src/containers/liquidity-container.scss
.carousel-container {
    width: 650px;
}

.liquidity-carousel-item {
    width: 100%;
    display: flex;
    justify-content: center;
    margin-bottom: 80px;
}

.liquidity-container {
    width: 450px;
    min-width: 225px;
    // background: radial-gradient(var(--bgDefault), var(--bgPrimary));
    background: linear-gradient(135deg, var(--bgPrimary), var(--bgDefault));
    box-shadow: 0 3px 12px var(--bgDeep);

    border-radius: 8px;
    > div {
        padding: 1.25rem 1.5rem;
    }

    &.yellow {
        background: #FFDF00;
    }
}

.transaction-speed {
    display: flex;
    font-size: 1rem;
    background: var(--bgDefault);
    padding: 0.75rem;
    border-radius: 4px;
    color: var(--faceDefault);
    > div {
        margin: 0.5rem  0;
        padding: 0.25rem 0.5rem;
        border: 1px solid var(--borderPrimary);
        text-align: center;
        flex-grow: 1;
        border-radius: 4px;
        span {
            padding: 0 0.5rem;
        }
        &:hover {
            cursor: pointer;
        }
    }
    .active {
        background: var(--objPrimary);
        color: var(--faceDeep);
        // border: 1px solid var(--borderPrimary);
    }
}

.transaction-settings {
    padding: 0.85rem 1rem;
    border-radius: 4px;
    // margin: 0 0.5rem;
    // color: var(--faceSecondary);
    color: var(--faceDefault);
    background: var(--objDefault);
    cursor: pointer;
}

.nav-item-border-wrapper {
    background: linear-gradient(to right, #fdb636 0%, #f500c4 100%);
    padding: 1px;
    border-radius: 4px;
}

.nav-item {
    padding: 0.85rem 1rem;
    // border-width: 1px;
    // background: linear-gradient(to bottom, var(--objSecondary), var(--objDefault));
    background: var(--objPrimary);
    border-radius: 4px;
    // border: 1px solid;
    // border-image-slice: 1;
    // border-image-source: linear-gradient(to right, #fdb636 0%, #f500c4 100%);
}

.settings-popover{
    position: absolute;
    border: 1px solid var(--borderPrimary);
    background: var(--objDefault);
    color: var(--faceDeep);
    border-radius: 4px;
    width: 250px;
    transform: translate(-225px, -30px);
    z-index: 1;
}

@media (max-width: 800px) {
    .liquidity-container {
        width: 100%;
    }
}

@media (max-width: 500px) {
    .transaction-speed {
        flex-direction: column;
        > div {
            width: 100%;
        }
    }
}

